UPDATE Fixed footer alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,8 +242,14 @@ h2 {
     width: 100%;
 }
 
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .contact-icon {
-    color:#fff ;
+    color: #fff;
     padding: 10px;
     font-size: 25px;
 }
